# services

./: .clang-tidy  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  main.cpp  main_transform.cpp  vcpkg-configuration.json  vcpkg.json
.github/workflows/: cmake_build.yml  codacy-coverage-reporter.yml  codeql.yml  cpp_artifacts.yml  cpp_artifacts_ubuntu.yml  cpp_artifacts_windows.yml  cpp_build_test.yml  cpp_build_test_ubuntu.yml  cpp_build_test_windows.yml
cmake/: improc_services.pc.in  improc_services_config.cmake.in
include/improc/services/: base_service.hpp  base_service.tpp  container.hpp  context.hpp  factory.hpp  factory_pattern.hpp  factory_pattern_policies.hpp  logger_services.hpp  sequence_service.hpp  sequence_service.tpp  template_factory.hpp
include/improc/services/chain_responsibility/: chain_responsibility_pattern.hpp  chain_responsibility_pattern.tpp  pattern.hpp  pattern.tpp
include/improc/services/container/: container.hpp  container.tpp
include/improc/services/factory/: factory_pattern.hpp  factory_pattern.tpp  factory_pattern_policies.hpp  variant_factory_pattern.hpp  variant_factory_pattern.tpp
include/improc/services/pipes/: base_pipe.hpp
src/: base_service.tpp  container.tpp  context.tpp  factory.tpp  factory_pattern.tpp  sequence_service.tpp  template_factory.tpp
test/: CMakeLists.txt  base_service_tests_def.hpp  improc_services_test_config.hpp.in  main_ex1.cpp  main_ex2.cpp  test_chain_responsibility_pattern.cpp  test_container.cpp  test_context.cpp  test_duplicated_service.cpp  test_ex1.json  test_ex2.json  test_factory.cpp  test_factory_pattern.cpp  test_factory_template.cpp  test_logger_services.cpp  test_sequence_service.cpp  test_services_main.cpp  test_several_outputs.cpp  test_variant_factory_pattern.cpp
test/data/: test_ex1_no_in_out.json  test_factory_template.json  test_no_service_inputs.json  test_no_service_outputs.json  test_no_service_type.json  test_no_services.json
version/: CMakeLists.txt  main.cpp  version_config.hpp.in
